push for gh pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Muaykhao86/odyssey.git",
+  "homepage": "https://Muaykhao86.github.io/odyssey",
   "name": "odysseybjj",
   "version": "0.1.0",
   "private": true,
