--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
   "devDependencies": {
     "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0"
-  }
+  },
+  "root": "build/",
+    "clean_urls": false,
+    "routes": {
+      "/**": "index.html"
+    }
 }
